add main notebooks

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('./src')\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "import sys\n",
+    "sys.path.append('./src')\n",
     "\n",
     "from data import PPCI"
    ]
@@ -21,17 +21,18 @@
    "outputs": [],
    "source": [
     "# load dataset\n",
-    "encoder = \"dino\"\n",
-    "dataset = PPCI(encoder = encoder,\n",
+    "dataset = PPCI(encoder = \"dino\",\n",
     "               token = \"class\",\n",
     "               task = \"or\",\n",
-    "               split_criteria = \"position_easy\",\n",
+    "               split_criteria = \"experiment\",\n",
     "               environment = \"supervised\",\n",
     "               batch_size = 64,\n",
     "               num_proc = 4,\n",
     "               verbose = True,\n",
-    "               data_dir = 'data/istant_hq',\n",
-    "               results_dir = f'results/istant_hq/{encoder}')"
+    "               data_dir = 'data/v2',\n",
+    "               generate = False,\n",
+    "               background = True,\n",
+    "               results_dir = f'results/v2')"
    ]
   },
   {
@@ -42,17 +43,29 @@
    "source": [
     "# example train\n",
     "dataset.train(add_pred_env=\"supervised\", \n",
-    "            hidden_layers = 1,\n",
-    "            hidden_nodes = 256,\n",
-    "            batch_size = 128,\n",
+    "            hidden_layers = 2,\n",
+    "            hidden_nodes = 16,\n",
+    "            batch_size = 64,\n",
     "            lr = 0.0005,\n",
-    "            num_epochs=5,\n",
+    "            num_epochs=100,\n",
     "            save = False,\n",
     "            verbose=True,\n",
-    "            multidomain=True,\n",
-    "            ic_weight=0,\n",
+    "            method=\"DERM\",\n",
+    "            ic_weight=10,\n",
+    "            gpu=False,\n",
     "            seed=1)\n",
-    "dataset.evaluate(color=None, verbose=False)"
+    "dataset.evaluate(color=None, verbose=True)\n",
+    "# dataset.evaluate(color=\"blue\", verbose=True)\n",
+    "# dataset.evaluate(color=\"yellow\", verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.model.best_epoch"
    ]
   }
  ],
