--- a/main.ipynb
+++ b/main.ipynb
@@ -23,7 +23,7 @@
     "# load dataset\n",
     "dataset = PPCI(encoder = \"dino\",\n",
     "               token = \"class\",\n",
-    "               task = \"or\",\n",
+    "               task = \"all\",\n",
     "               split_criteria = \"experiment\",\n",
     "               environment = \"supervised\",\n",
     "               batch_size = 64,\n",
@@ -43,29 +43,19 @@
    "source": [
     "# example train\n",
     "dataset.train(add_pred_env=\"supervised\", \n",
-    "            hidden_layers = 2,\n",
-    "            hidden_nodes = 16,\n",
+    "            hidden_nodes = 128,\n",
     "            batch_size = 64,\n",
     "            lr = 0.0005,\n",
-    "            num_epochs=100,\n",
+    "            num_epochs=10,\n",
     "            save = False,\n",
     "            verbose=True,\n",
-    "            method=\"DERM\",\n",
+    "            method=\"ERM\",\n",
     "            ic_weight=10,\n",
-    "            gpu=False,\n",
-    "            seed=1)\n",
-    "dataset.evaluate(color=None, verbose=True)\n",
-    "# dataset.evaluate(color=\"blue\", verbose=True)\n",
-    "# dataset.evaluate(color=\"yellow\", verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.model.best_epoch"
+    "            gpu=True,\n",
+    "            seed=1,\n",
+    "            cls_name=\"Transformer\")\n",
+    "dataset.evaluate(color=\"blue\", verbose=True)\n",
+    "dataset.evaluate(color=\"yellow\", verbose=True)"
    ]
   }
  ],
