update main noteboook

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
     "               verbose = True,\n",
     "               data_dir = 'data/v2',\n",
     "               generate = False,\n",
-    "               background = True,\n",
+    "               background = False,\n",
     "               results_dir = f'results/v2')"
    ]
   },
@@ -51,7 +51,7 @@
     "            verbose=True,\n",
     "            method=\"ERM\",\n",
     "            ic_weight=10,\n",
-    "            gpu=True,\n",
+    "            gpu=False,\n",
     "            seed=1,\n",
     "            cls_name=\"Transformer\")\n",
     "dataset.evaluate(color=\"blue\", verbose=True)\n",
